[package]
name = "kelpie"
version = "0.1.0"
edition = "2021"

[dependencies]
bitvec = "1.0.1"
pco = "0.3.1"
q_compress = "0.11.7"
sqlite = { version = "0.36.0", features = ["bundled"], default-features = false }
sqlite3-sys = { version = "0.17.0", features = ["bundled"], default-features = false }
thiserror = "1.0.63"

[dev-dependencies]

arbitrary = "1.3.2"
derive_arbitrary = "1.3.2"
quickcheck = "1.0.3"
quickcheck_macros = "1.0.0"
rand = { version = "0.8.5", features = ["small_rng"] }
